Enhance policies section and update content
Added new policies section and improved existing text for clarity.

--- a/index.html
+++ b/index.html
@@ -178,6 +178,16 @@
     }
     .trust-strip strong{color:var(--text)}
 
+    .policy{
+      margin:0;
+      padding-left:18px;
+      color:var(--muted);
+      line-height:1.85;
+      font-size:14px;
+    }
+    .policy li{margin:8px 0}
+    .policy strong{color:var(--text)}
+
     .footer{
       margin:34px 0 10px;
       padding:18px 0 6px;
@@ -215,7 +225,7 @@
 </head>
 
 <body>
-  <!-- WhatsApp floating button (EDIT PHONE) -->
+  <!-- WhatsApp floating button -->
   <a class="wa-float" href="https://wa.me/905345940818" target="_blank" rel="noopener">
     <span class="wa-dot"></span>
     <span>WhatsApp</span>
@@ -233,6 +243,7 @@
         <span class="pill">Trusted Execution</span>
         <span class="pill">Pay After Service</span>
         <a class="btn" href="#services">Services</a>
+        <a class="btn" href="#policies">Policies</a>
         <a class="btn primary" href="#contact">Contact</a>
       </div>
     </header>
@@ -243,8 +254,8 @@
           <div>
             <h1>ALARAB GLOBAL HOLDINGS</h1>
             <p class="sub">
-              A global brand built on trust, execution, and client safety.
-              We deliver high-quality travel and trusted services with a simple promise:
+              A global brand built on trust, disciplined execution, and client safety.
+              We deliver premium travel and trusted services with one promise:
               <strong>clarity, reliability, and results.</strong>
             </p>
 
@@ -256,8 +267,8 @@
             </div>
 
             <div class="cta">
-              <a class="btn primary" href="#contact">Start on WhatsApp</a>
-              <a class="btn" href="#about">Who We Are</a>
+              <a class="btn primary" href="https://wa.me/905345940818" target="_blank" rel="noopener">Start on WhatsApp</a>
+              <a class="btn" href="#how">How It Works</a>
             </div>
 
             <div class="trust-strip" role="note">
@@ -267,15 +278,14 @@
           </div>
 
           <aside class="mini" aria-label="Quick Info">
-            <h3>What we deliver</h3>
+            <h3>Current focus</h3>
             <p>
-              Premium trips & trusted execution — with disciplined systems behind the scenes.
-              Turkey is our current operational base, but the brand is built for global scale.
+              Turkey is our current operational base for premium travel execution.
+              The holding brand is built for global scale.
             </p>
             <div class="divider"></div>
             <div class="notice">
-              This site is the first English version. Multi-language expansion will follow,
-              tailored by location and client profile.
+              This is the first English version. Multi-language expansion will follow by location and client profile.
             </div>
           </aside>
         </div>
@@ -302,8 +312,8 @@
             <div class="service">
               <div class="title">How We Work</div>
               <p class="desc">
-                Clear scope, clear expectations, and strong delivery. We keep operations disciplined,
-                protect client data, and build systems that scale without chaos.
+                Clear scope, clear expectations, strong delivery. We protect client data, keep operations disciplined,
+                and build systems that scale without chaos.
               </p>
             </div>
           </div>
@@ -313,8 +323,8 @@
       <section id="services" class="section">
         <h2>Our Services</h2>
         <p class="lead">
-          We currently focus on premium travel execution with trusted partners. More verticals will be added
-          under the holding structure as the system grows.
+          We currently focus on premium travel execution with trusted partners. More verticals will be added step-by-step
+          under the holding structure.
         </p>
 
         <div class="grid">
@@ -339,33 +349,106 @@
 
           <div class="card col-6">
             <div class="service">
-              <div class="title">Pay After Service Model</div>
-              <p class="desc">
-                Built to maximize trust. We structure bookings and execution to reduce risk and increase confidence.
-                (Full model and flows will be published as the platform expands.)
-              </p>
-            </div>
-          </div>
-          <div class="card col-6">
-            <div class="service">
               <div class="title">B2B & Corporate Handling</div>
               <p class="desc">
                 Support for agencies, corporate travel, and high-volume clients — with consistent standards and reporting.
               </p>
             </div>
           </div>
+          <div class="card col-6">
+            <div class="service">
+              <div class="title">Trusted Execution</div>
+              <p class="desc">
+                We coordinate details carefully so clients avoid surprises — timing, drivers, hotels, and daily flow.
+              </p>
+            </div>
+          </div>
         </div>
 
         <div class="notice">
-          Note: This is a brand foundation page. Booking portals, instant hotel pricing, and expanded services
-          will be added step-by-step.
+          This is a foundation page. Booking portals, instant hotel pricing, and expanded services will be added as the system grows.
+        </div>
+      </section>
+
+      <section id="how" class="section">
+        <h2>How It Works</h2>
+        <p class="lead">
+          Simple process. Clear scope. Strong execution. We keep everything transparent and aligned from day one.
+        </p>
+
+        <div class="grid">
+          <div class="card col-4">
+            <div class="service">
+              <div class="title">1) Understand your trip</div>
+              <p class="desc">We confirm dates, city plan, traveler profile, and service level (VIP / family / etc.).</p>
+            </div>
+          </div>
+          <div class="card col-4">
+            <div class="service">
+              <div class="title">2) Build the program</div>
+              <p class="desc">Hotels + transportation + city flow. No chaos, no over-promising.</p>
+            </div>
+          </div>
+          <div class="card col-4">
+            <div class="service">
+              <div class="title">3) Execute & support</div>
+              <p class="desc">We deliver with live support and rapid problem-solving when needed.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="policies" class="section">
+        <h2>Policies</h2>
+        <p class="lead">
+          These policies exist to protect the client first, and to keep execution clean and fair.
+          We will refine and expand policies over time.
+        </p>
+
+        <div class="grid">
+          <div class="card col-6">
+            <div class="service">
+              <div class="title">Pay After Service (Overview)</div>
+              <ul class="policy">
+                <li><strong>Client safety comes first.</strong> We structure the trip to reduce risk and increase confidence.</li>
+                <li>When the client chooses a full package model, payment is completed <strong>after the trip</strong> once services are delivered as agreed.</li>
+                <li>We focus on <strong>clarity</strong> (scope), <strong>discipline</strong> (execution), and <strong>transparency</strong> (pricing).</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="card col-6">
+            <div class="service">
+              <div class="title">Alarab Access Fee (10%)</div>
+              <ul class="policy">
+                <li>Access Fee is a transparent service fee equal to <strong>10% of the agreed total</strong>.</li>
+                <li>The 10% is paid upfront by card to confirm and activate the arrangement.</li>
+                <li>The client pays the hotel directly at check-in / arrival (when applicable).</li>
+                <li>If a cancellation occurs, the paid amount is returned within <strong>5 business days</strong> (based on the cancellation terms).</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="card col-12">
+            <div class="service">
+              <div class="title">Data & Privacy</div>
+              <ul class="policy">
+                <li>We protect client information and restrict access internally.</li>
+                <li>We do not share private client data beyond what is necessary to deliver the service.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="notice">
+          Detailed terms (cancellations, changes, and service scope by category) will be published as we expand the system.
         </div>
       </section>
 
       <section id="contact" class="section">
         <h2>Contact</h2>
         <p class="lead">
-          Fastest way: WhatsApp. For partnerships and official communication, use email.
+          Fastest: WhatsApp. For partnerships and official communication, email us.
         </p>
 
         <div class="grid">
@@ -393,6 +476,7 @@
         <div>
           <a href="#about">About</a> ·
           <a href="#services">Services</a> ·
+          <a href="#policies">Policies</a> ·
           <a href="#contact">Contact</a>
         </div>
       </footer>
